# geo-offset

./: Cargo.toml
.github/workflows/: rust.yml
src/: edge.rs  offset.rs
src/tests/: fixtures.rs  mod.rs
