[package]
name = "geo-offset"
version = "0.3.2"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>", "TimTheBig"]
edition = "2021"
license = "ISC"
readme = "README.md"
repository = "https://github.com/lelongg/geo-offset"
documentation = "https://docs.rs/geo-offset/"
description = "Add margin and padding to geometric shapes"
keywords = ["geo", "polygon", "offset", "margin", "padding", "3d"]
categories = ["algorithms"]

[dependencies]
geo-types = "0.7"
itertools = "0.13"
geo-clipper = "0.8"
num-traits = "0.2.19"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.7"
data-uri-utils = "0.2"
geo-svg = "0.6"
geo-types = "0.7"
